--- a/requirements.txt
+++ b/requirements.txt
@@ -11,12 +11,17 @@ django-jazzmin==2.4.9
 django-sequences==2.6
 djangorestframework==3.12.4
 djangorestframework-simplejwt==5.1.0
+flake8==4.0.1
+mccabe==0.6.1
 mypy-extensions==0.4.3
 pathspec==0.9.0
 platformdirs==2.4.0
 psycopg2-binary==2.9.1
+pycodestyle==2.8.0
+pyflakes==2.4.0
+PyJWT==2.3.0
 pytz==2021.3
-regex==2021.10.8
+regex==2021.10.21
 sqlparse==0.4.2
 tomli==1.2.1
 typing-extensions==3.10.0.2
