--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,14 @@ black==21.9b0
 certifi==2021.10.8
 charset-normalizer==2.0.7
 click==8.0.3
+dj-database-url==0.5.0
 Django==3.2.12
 django-cors-headers==3.10.0
 django-filter==21.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==5.1.0
 flake8==4.0.1
+gunicorn==20.1.0
 mccabe==0.6.1
 mypy-extensions==0.4.3
 pathspec==0.9.0
