--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ click==8.0.3
 dj-database-url==0.5.0
 Django==3.2.12
 django-cors-headers==3.10.0
+django-environ==0.8.1
 django-filter==21.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==5.1.0
