--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,6 @@ click==8.0.3
 dj-database-url==0.5.0
 Django==3.2.12
 django-cors-headers==3.10.0
-django-environ==0.8.1
 django-filter==21.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==5.1.0
@@ -20,6 +19,7 @@ psycopg2-binary==2.9.1
 pycodestyle==2.8.0
 pyflakes==2.4.0
 PyJWT==2.3.0
+python-dotenv==0.20.0
 pytz==2021.3
 regex==2021.10.21
 sqlparse==0.4.2
