--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,38 @@
 asgiref==3.4.1
 black==21.9b0
+boto3==1.24.7
+botocore==1.27.7
 certifi==2021.10.8
 charset-normalizer==2.0.7
 click==8.0.3
 dj-database-url==0.5.0
 Django==3.2.12
+django-cleanup==6.0.0
 django-cors-headers==3.10.0
 django-filter==21.1
+django-storages==1.12.3
 djangorestframework==3.12.4
 djangorestframework-simplejwt==5.1.0
 flake8==4.0.1
 gunicorn==20.1.0
+jmespath==1.0.0
 mccabe==0.6.1
 mypy-extensions==0.4.3
 pathspec==0.9.0
+Pillow==9.1.1
 platformdirs==2.4.0
 psycopg2-binary==2.9.1
 pycodestyle==2.8.0
 pyflakes==2.4.0
 PyJWT==2.3.0
+python-dateutil==2.8.2
 python-dotenv==0.20.0
 pytz==2021.3
 regex==2021.10.21
+s3transfer==0.6.0
+six==1.16.0
 sqlparse==0.4.2
 tomli==1.2.1
 typing-extensions==3.10.0.2
+urllib3==1.26.9
 whitenoise==5.3.0
